2012-07-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Add the new "Add results to Asset Management" task preference.

	* src/gsad.c (init_validator): Add in_assets.

	* src/gsad_omp.c (create_task_omp, save_task_omp)
	(save_container_task_omp): Add in_assets to task preferences in OMP
	command.

	* src/html/omp.xsl (html-report-table, html-edit-task-form, new_task): Add
	in_assets fields.

2012-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (get_many): If the filter is empty then add "row=-2", so that
	Rows Per Page rows are returned, because Manager now returns all rows.

2012-07-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add summary.

	* src/gsad_omp.c (save_report_format_omp): Get summary from "summary"
	instead of "comment", to all quotations in the summary.

	* src/html/omp.xsl (html-edit-report-format-form): Rename field to
	"summary".

2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (tasks.html): Added hint that paused scans will have
	impact on overall performance.

2012-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Remove assigned but unused
	variable to address compiler warning.

2012-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Print a more useful message if both libxslt and the
	xsltproc binary cannot be found instead of failing silently.

2012-07-02  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/help.xsl: Fix a few typos in the help texts.

2012-06-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Bring agents up to date with the GET filtering changes.

	* src/gsad_omp.c (create_agent_omp, delete_agent_omp): Use the get_agents
	function to get agents, so that the new filtering is right.

	* src/html/gsad.xsl (verify_agent_response): New template.
	(html-gsa-logo): Add missing agent responses.
